--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 2c9daf006fc7e80ad2838d89a86d025d1de4a0f5967aed78340366919fd9b303
       BRANCH_NAME: main
-      SCAN_ID: 3995477e899c30b609b32375cf24f41a24139a8a4ab9d7457041d36bd27fc7a8
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://9888-103-163-248-176.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://5f41-103-163-248-176.ngrok.io/resultparserapi\"\
+      SCAN_ID: 89fdb0e2183ff212bef14cb2dc3f8bb64cd48bcb8a551ea35daf82c270f5256b
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://17e1-103-163-248-176.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://0530-103-163-248-176.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://9888-103-163-248-176.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://17e1-103-163-248-176.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' )\necho \"::set-output name=authTokenJson::$respJson\""
     - uses: actions/checkout@v2
