--- a/.github/workflows/ShiftLeft.yaml
+++ b/.github/workflows/ShiftLeft.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: e30163908d383d8f5b66a844d99d0714df58c399d1400685baa670a513f6d875
       BRANCH_NAME: main
-      SCAN_ID: 3918b2ecb8c8458c1e5d74a9fc2ded64a65846d441051f4687f6990fa24f032f
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.dev.securin.io/resultparserapi/v1\"\
-        ,\"SL_RESULT_API_HOST\":\"https://slresultapi.dev.securin.io/resultapi/v1\"\
+      SCAN_ID: ec294a4e93f0786b1d4fb46bdcb996c09e020cd8edb97f04b393ced0cafbeeb3
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://e076-183-82-28-149.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"http://0fe3-183-82-28-149.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://slresultapi.dev.securin.io/resultapi/v1/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'http://e076-183-82-28-149.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
