--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -11,16 +11,16 @@ on:
 jobs:
   scanning:
     env:
-      APP_ID: e0df94257cd350b230f97a59bea1b884785bafbe0533b651b3c8dbd11dd8e4dc
+      APP_ID: c57006afa208cd66a4c4f607455e360b7c591fe2c2b0ca25057c6e33426cbdd3
       BRANCH_NAME: main
-      SCAN_ID: bc40d250357ef66a091c3d5a162d8b2101669e7a42a6fc57faa8e7847b5092e3
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://fc87-103-176-166-238.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"https://43f3-103-176-166-238.ngrok.io/resultparserapi\"\
+      SCAN_ID: 22863939a62bcfa8cc1f97f4a427f2c51738d7561f69f31c68a695dcd0d4a8a1
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://slresultapi.qa.securin.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.qa.securin.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'https://fc87-103-176-166-238.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.qa.securin.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
