--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -11,16 +11,16 @@ on:
 jobs:
   scanning:
     env:
-      APP_ID: 802a2751b75debc58f6677211fb7a93ac3222b614fe405b5b53f0be93fb3d6c4
+      APP_ID: 6c0a8e13595b0d0dfbe4ddc7f95d4bed5d503f2a483c812396b989691308d054
       BRANCH_NAME: main
-      SCAN_ID: 8243dc89e140420cb50043c21acf7af7bad1d2b629ade1a3b75a7afcd5091a87
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://c68e-183-82-24-69.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"http://3649-183-82-24-69.ngrok.io/resultparserapi\"\
+      SCAN_ID: 11abd3ab737961d7759f1b7075ad5c7a5ff6fa47dad5540e3c0517dfc4e1927a
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://slresultapi.qa.securin.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.qa.securin.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'http://c68e-183-82-24-69.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.qa.securin.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
