--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -13,14 +13,14 @@ jobs:
     env:
       APP_ID: 802a2751b75debc58f6677211fb7a93ac3222b614fe405b5b53f0be93fb3d6c4
       BRANCH_NAME: main
-      SCAN_ID: b7f4104913590294a6ef8f30c938c2c8da86245a14bdb91f9fab7631d659d6ce
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://e4c9-183-82-25-183.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"http://9a65-183-82-25-183.ngrok.io/resultparserapi\"\
+      SCAN_ID: b6911b5e90efcbe3a44c0d38d1ae08bceeb98eaf212a82847e411f2d20744d37
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://2f20-183-82-205-149.ngrok.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"http://7a39-183-82-205-149.ngrok.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'http://e4c9-183-82-25-183.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'http://2f20-183-82-205-149.ngrok.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
