--- a/.github/workflows/Securin-aspm.yaml
+++ b/.github/workflows/Securin-aspm.yaml
@@ -11,16 +11,16 @@ on:
 jobs:
   scanning:
     env:
-      APP_ID: 802a2751b75debc58f6677211fb7a93ac3222b614fe405b5b53f0be93fb3d6c4
+      APP_ID: 61209c3258d758e9923defea1849b905411472714a0bb4864904f4b2353cc075
       BRANCH_NAME: main
-      SCAN_ID: 5bc2827df809997e232df79f0d0d667a80f0920755a5e713e218be758c0d3efb
-      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"http://1a8a-183-82-205-149.ngrok.io/resultapi\"\
-        ,\"SL_RESULTPARSER_API_HOST\":\"http://2051-183-82-205-149.ngrok.io/resultparserapi\"\
+      SCAN_ID: 6ea3849de1160fceae2be39e1836f1d8eba6b86a2f92aa032c8da61806136e43
+      REQ_URL_MAP: "${{toJSON('{\"SL_RESULT_API_HOST\":\"https://slresultapi.qa.securin.io/resultapi\"\
+        ,\"SL_RESULTPARSER_API_HOST\":\"https://slresultparserapi.qa.securin.io/resultparserapi\"\
         }')}}"
     steps:
     - name: Retrieve Token Info
       id: auth_token
-      run: "respJson=$(curl --location --request GET 'http://1a8a-183-82-205-149.ngrok.io/resultapi/aws/ecr/token'\
+      run: "respJson=$(curl --location --request GET 'https://slresultapi.qa.securin.io/resultapi/aws/ecr/token'\
         \  --header 'Authorization: Bearer ${{secrets.CLI_ACCESS_TOKEN}}'  --data-raw\
         \ ' ' ) \necho \"authTokenJson=$respJson\" >> $GITHUB_OUTPUT"
     - uses: actions/checkout@v3
